--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,30 @@
-# Core data processing
-numpy>=1.23.0,<1.25.0
-pandas>=1.5.0,<2.1.0
-scipy>=1.9.0,<1.11.0
-numba>=0.56.0,<0.58.0
+# Core ML/GPU packages
+--find-links https://download.pytorch.org/whl/torch_stable.html
+torch>=2.0.1
+torchvision>=0.15.2
+
+# Data analysis
+# numpy and pandas do NOT support Python 3.13 as of June 2024.
+# You must use Python 3.11 or 3.10 for these packages.
+numpy>=1.24.3,<1.25.0
+pandas>=2.0.1,<2.1.0
+yfinance>=0.2.18
 
 # Visualization
-matplotlib>=3.6.0,<3.8.0
-plotly>=5.13.0,<5.16.0
-dash>=2.9.0,<2.11.0
-dash-bootstrap-components>=1.3.0,<1.5.0
-dash-daq>=0.5.0,<0.6.0
+plotly>=5.15.0
+dash>=2.10.0
+dash-bootstrap-components>=1.4.1
 
-# Machine learning
-torch>=2.0.0,<2.1.0
-scikit-learn>=1.2.0,<1.3.0
-statsmodels>=0.13.0,<0.15.0
-torchserve>=0.7.0,<0.9.0
+# API and web
+flask>=3.0.3
+werkzeug>=3.0.6
+fastapi>=0.100.0
+uvicorn>=0.22.0
 
-# Data fetching
-yfinance>=0.2.12,<0.3.0
-requests>=2.28.0,<2.32.0
-beautifulsoup4>=4.11.0,<4.13.0
+# Utilities
+python-dotenv>=1.0.0
+requests>=2.31.0
 
-# Utils
-click>=8.1.0,<8.2.0
-python-dotenv>=1.0.0,<1.1.0
-tqdm>=4.64.0,<4.66.0
-pytz>=2023.0,<2024.0
-tenacity>=8.1.0,<8.3.0
-
-# Server
-gunicorn>=20.1.0,<20.2.0
-uvicorn>=0.20.0,<0.23.0
-
-# Limit problematic dependencies
-pycodestyle>=2.9.0,<2.11.0
+# Python version compatibility
+# This project requires Python 3.11 or 3.10.
+# numpy and pandas do NOT support Python 3.13 as of June 2024.
